--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "maska": "^1.5.0",
     "vue": "^3.2.25"
   },
   "devDependencies": {
