--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "maska": "^1.5.0",
+    "pinia": "^2.0.14",
     "vue": "^3.2.25"
   },
   "devDependencies": {
